# Game2D

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  debug.cmd  main.c  release.cmd
G2D/: g2d.c  g2d.h
Game/: CMakeLists.txt  g_collisions.c  g_destroy.c  g_entities.c  g_init.c  g_player.c  g_render.c  g_scene.c  g_simulate.c  g_sprite.c  g_utils.c  game.h
Game/headers/: g_collisions.h  g_entities.h  g_internal.h  g_player.h  g_render.h  g_resources.h  g_scene.h  g_sound.h  g_sprite.h  g_utils.h  game.h
Game/resources/: sound.rc
Render/: r_draw_circle.c  r_draw_line.c  r_draw_point.c  r_draw_rect.c  r_draw_sprite.c  r_draw_triangle.c  r_utils.c  render.h  render_internal.h
Utils/: utils.c
Window/: window.h
Window/Win_32/: w_callback.c  w_create.c  w_fps.c  w_input.c  w_input_keyboard.c  w_input_mouse.c  w_render.c  w_sprite.c  w_sprite.h  win32.h
headers/: game.h
lib/: CMakeLists.txt  g2d.h
lib/G2D/: CMakeLists.txt  g2d.c  render.h  utils.h  window.h
lib/G2D/Render/: r_draw_circle.c  r_draw_line.c  r_draw_point.c  r_draw_rect.c  r_draw_sprite.c  r_draw_triangle.c  r_utils.c
lib/G2D/Render/headers/: r_internal.h
lib/G2D/Utils/: u_other.c  u_vector.c  utils.c
lib/G2D/Window/: w_buttons.h  w_input.h  w_win32.h
lib/G2D/Window/Win32/: w_win32_callback.c  w_win32_create.c  w_win32_destroy.c  w_win32_fps.c  w_win32_input.c  w_win32_input_keyboard.c  w_win32_input_mouse.c  w_win32_render.c  w_win32_sound.c  w_win32_sprite.c  w_win32_utils.c  win32_callback.c  win32_create.c  win32_fps.c  win32_input.c  win32_input_keyboard.c  win32_input_mouse.c  win32_render.c  win32_sprite.c
lib/G2D/Window/Win32/headers/: hwindows.h  w_win32_internal.h  win32_internal.h
lib/G2D/Window/Win_32/: w_callback.c  w_create.c  w_fps.c  w_input.c  w_input_keyboard.c  w_input_mouse.c  w_render.c  w_sprite.c
lib/G2D/Window/headers/: w_input.h  w_win32.h  win32.h
lib/G2D/headers/: g2d.h  render.h  utils.h  window.h
